; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/host_applications/linux/apps/dtoverlay/extr_dtoverlay_main.c_apply_overlay.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/host_applications/linux/apps/dtoverlay/extr_dtoverlay_main.c_apply_overlay.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [6 x i8] c"%s/%s\00", align 1
@dt_overlays_dir = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [31 x i8] c"Overlay '%s' is already loaded\00", align 1
@DIR_MODE = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [36 x i8] c"Failed to apply overlay '%s' (load)\00", align 1
@.str.3 = private unnamed_addr constant [8 x i8] c"%s/dtbo\00", align 1
@.str.4 = private unnamed_addr constant [36 x i8] c"Failed to apply overlay '%s' (save)\00", align 1
@.str.5 = private unnamed_addr constant [38 x i8] c"Failed to apply overlay '%s' (kernel)\00", align 1
@.str.6 = private unnamed_addr constant [35 x i8] c"Failed to create overlay directory\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @apply_overlay to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @apply_overlay(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %9 = load i32, i32* @dt_overlays_dir, align 4
  %10 = sext i32 %9 to i64
  %11 = inttoptr i64 %10 to i8*
  %12 = load i8*, i8** %4, align 8
  %13 = call i8* (i8*, i8*, ...) @sprintf_dup(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i8* %11, i8* %12)
  store i8* %13, i8** %5, align 8
  store i32 0, i32* %6, align 4
  %14 = load i8*, i8** %5, align 8
  %15 = call i64 @dir_exists(i8* %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %20

17:                                               ; preds = %2
  %18 = load i8*, i8** %4, align 8
  %19 = call i32 (i8*, ...) @error(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.1, i64 0, i64 0), i8* %18)
  br label %67

20:                                               ; preds = %2
  %21 = load i8*, i8** %5, align 8
  %22 = load i32, i32* @DIR_MODE, align 4
  %23 = call i64 @mkdir(i8* %21, i32 %22)
  %24 = icmp eq i64 %23, 0
  br i1 %24, label %25, label %64

25:                                               ; preds = %20
  %26 = load i8*, i8** %3, align 8
  %27 = call i32* @dtoverlay_load_dtb(i8* %26, i32 0)
  store i32* %27, i32** %7, align 8
  %28 = load i32*, i32** %7, align 8
  %29 = icmp ne i32* %28, null
  br i1 %29, label %33, label %30

30:                                               ; preds = %25
  %31 = load i8*, i8** %4, align 8
  %32 = call i32 (i8*, ...) @error(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.2, i64 0, i64 0), i8* %31)
  br label %57

33:                                               ; preds = %25
  %34 = load i8*, i8** %5, align 8
  %35 = call i8* (i8*, i8*, ...) @sprintf_dup(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.3, i64 0, i64 0), i8* %34)
  store i8* %35, i8** %8, align 8
  %36 = load i32*, i32** %7, align 8
  %37 = load i8*, i8** %8, align 8
  %38 = call i64 @dtoverlay_save_dtb(i32* %36, i8* %37)
  %39 = icmp ne i64 %38, 0
  br i1 %39, label %40, label %43

40:                                               ; preds = %33
  %41 = load i8*, i8** %4, align 8
  %42 = call i32 (i8*, ...) @error(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.4, i64 0, i64 0), i8* %41)
  br label %52

43:                                               ; preds = %33
  %44 = load i8*, i8** %5, align 8
  %45 = call i32 @overlay_applied(i8* %44)
  %46 = icmp ne i32 %45, 0
  br i1 %46, label %50, label %47

47:                                               ; preds = %43
  %48 = load i8*, i8** %4, align 8
  %49 = call i32 (i8*, ...) @error(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.5, i64 0, i64 0), i8* %48)
  br label %51

50:                                               ; preds = %43
  store i32 1, i32* %6, align 4
  br label %51

51:                                               ; preds = %50, %47
  br label %52

52:                                               ; preds = %51, %40
  %53 = load i8*, i8** %8, align 8
  %54 = call i32 @free_string(i8* %53)
  %55 = load i32*, i32** %7, align 8
  %56 = call i32 @dtoverlay_free_dtb(i32* %55)
  br label %57

57:                                               ; preds = %52, %30
  %58 = load i32, i32* %6, align 4
  %59 = icmp ne i32 %58, 0
  br i1 %59, label %63, label %60

60:                                               ; preds = %57
  %61 = load i8*, i8** %5, align 8
  %62 = call i32 @rmdir(i8* %61)
  br label %63

63:                                               ; preds = %60, %57
  br label %66

64:                                               ; preds = %20
  %65 = call i32 (i8*, ...) @error(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.6, i64 0, i64 0))
  br label %66

66:                                               ; preds = %64, %63
  br label %67

67:                                               ; preds = %66, %17
  %68 = load i32, i32* %6, align 4
  ret i32 %68
}

declare dso_local i8* @sprintf_dup(i8*, i8*, ...) #1

declare dso_local i64 @dir_exists(i8*) #1

declare dso_local i32 @error(i8*, ...) #1

declare dso_local i64 @mkdir(i8*, i32) #1

declare dso_local i32* @dtoverlay_load_dtb(i8*, i32) #1

declare dso_local i64 @dtoverlay_save_dtb(i32*, i8*) #1

declare dso_local i32 @overlay_applied(i8*) #1

declare dso_local i32 @free_string(i8*) #1

declare dso_local i32 @dtoverlay_free_dtb(i32*) #1

declare dso_local i32 @rmdir(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
